[metadata]
name = leaguelosestreakmeter-fhodun
version = 0.0.1
author = Filip Hodun
author_email = filiphodun@gmail.com
description = Lose streak meter for League of legends
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_file = file: LICENSE
url = https://github.com/fhodun/leaguelosestreakmeter
project_urls =
    Bug Tracker = https://github.com/fhodun/leaguelosestreakmeter/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
requires = riotwatcher

[options]
packages = find:
install_requires = riotwatcher
python_requires = >=3.6